// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blogs action should create add blog action 1`] = `
Object {
  "blog": Object {
    "categories": Array [
      "cat1",
      "cat2",
    ],
    "content": "Content of blog",
    "date": "2019-08-19T17:54:40.134Z",
    "id": "6aaafb50-c2aa-11e9-a076-11d1b0d57a3c",
    "title": "Test Blog",
  },
  "type": "ADD_BLOG",
}
`;

exports[`blogs action should create edit blog action 1`] = `
Object {
  "blog": Object {
    "categories": Array [
      "cat1",
      "cat2",
    ],
    "content": "Content of blog",
    "date": "2018-01-22T00:00:00.000Z",
    "id": "2",
    "title": "Test Blog",
  },
  "type": "EDIT_BLOG",
}
`;
